test/parse/relaxed/bad/maxvarexceededinbody2.cnf
p cnf 2 2
-2 -1 0
1 2 300000000000 0
